--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -74,8 +74,8 @@
 
       <div class="meal-selection-header">
         <div>
-          <h3><i class="fas fa-brain"></i> Recommandations pour <%= @meal.dish_name %></h3>
-          <p class="meal-selection-subtitle">
+          <h3 style="color: #C9A962; font-family: $font-didot;"> Recommandations pour <%= @meal.dish_name %></h3>
+            <p class="meal-selection-subtitle" style="font-family: 'Didot', serif;">
             Cliquez sur les boissons pour les sélectionner
           </p>
         </div>
@@ -111,7 +111,7 @@
       <%# --- 🍷 Vins --- %>
       <%# <% wines = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Vin" }) %>
       <% if @drinks_wine.any? %>
-        <h4>Vins</h4>
+        <h4 class="mt-4">Vins</h4>
         <div class="cards">
           <% @drinks_wine.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
@@ -138,7 +138,7 @@
       <%# --- 🍸 Boissons alcoolisées --- %>
       <%# <% alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Alcoolisée" }) %>
       <% if @drinks_alcohol.any? %>
-        <h4>Boissons alcoolisées</h4>
+        <h4 class="mt-4">Boissons alcoolisées</h4>
         <div class="cards">
           <% @drinks_alcohol.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
@@ -165,7 +165,7 @@
       <%# --- 🥤 Boissons sans alcool --- %>
       <%# <% no_alcohol = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Non alcoolisée" }) %>
       <% if @drinks_no_alcohol.any? %>
-        <h4>Boissons sans alcool</h4>
+        <h4 class="mt-4">Boissons sans alcool</h4>
         <div class="cards">
           <% @drinks_no_alcohol.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
@@ -192,7 +192,7 @@
       <%# --- 🎲 Suggestions improbables --- %>
       <%# <% improbable = @meal.meal_drinks.joins(:drink).where(status: "recommendation", drinks: { category: "Improbable" }) %>
       <% if @drinks_impro.any? %>
-        <h4>Suggestions improbables</h4>
+        <h4 class="mt-4">Suggestions improbables</h4>
         <div class="cards">
           <% @drinks_impro.each do |drink| %>
             <label class="td-wine-card w-100 drink-selectable"
