--- a/app/assets/stylesheets/components/_footbar.scss
+++ b/app/assets/stylesheets/components/_footbar.scss
@@ -106,6 +106,7 @@
     border: 1px solid #121212;
     border-radius: 50%;
     margin-bottom: 4px;
+    color: black;
     box-shadow:
       0 4px 12px rgba(201, 169, 98, 0.4),
       0 0 20px rgba(212, 188, 123, 0.2),
