--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -54,7 +54,7 @@
           data: { meal_form_target: "photoInput" } %>
       <div class="td-friend-chip-content">
         <span class="td-friend-chip-icon">📷</span>
-        <span class="td-friend-chip-name" data-meal-form-target="photoLabel">Prendre une photo du repas</span>
+        <span class="td-friend-chip-name" data-meal-form-target="photoLabel">Prendre une photo</span>
       </div>
     </label>
   </div>
