--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -74,7 +74,7 @@
 
       <div class="meal-selection-header">
         <div>
-          <h3 style="color: #C9A962; font-family: $font-didot;"> Recommandations pour <%= @meal.dish_name %></h3>
+          <h1 style="color: #C9A962" class="td-page-title">Ce qui match avec <%= @meal.dish_name %></h1>
             <p class="meal-selection-subtitle" style="font-family: 'Didot', serif;">
             Cliquez sur les boissons pour les sélectionner
           </p>
